feat: 상품 목록 이미지 표시 기능 구현 및 관련 버그 수정